# YNLO

./: .gitignore  CMakeLists.txt  YNLO.pro
YNLO/: Buffer.h  Except.h  Pipeline.cpp  Pipeline.h  UdpSocket.cpp  UdpSocket.h  YNLO.cpp  YNLO.h  YNLO.pro  util.cpp  util.h  yaml.cpp  yaml.h
YNLO/cv/: CamParam.h  ORBExtractor.h  SparseFeature.h
YNLO/slam/: eurocloader.cpp  eurocloader.h  frame.h  keyframe.h  kittiloader.cpp  mappoint.h
examples/SparseStereoMatching/: main.cpp
examples/camera/: main.cpp
examples/hello_world/: hello_world.cpp  hello_world.pro
examples/listener/: listener.cpp  listener.pro
examples/odometry/: main.cpp  odometry.pro
examples/pipeline/: main.cpp
examples/talker/: talker.cpp  talker.pro
examples/v4l2example/: main.cpp
include/cv/: Camera.h  cvutil.h  warp.h
include/slam/: Feature.h  Frame.h  Map.h  Point.h  eurocloader.h  kittiloader.h  map.h  tracking.h
include/socket/: UdpSocket.h
include/util/: NonlinearSolver.h  Pipeline.h  Trace.h  util.h  yaml.h
src/cv/: Camera.cpp  ORBExtractor.cpp  cvutil.cpp  warp.cpp
src/slam/: Feature.cpp  Frame.cpp  Map.cpp  Point.cpp  eurocloader.cpp
src/util/: Except.cpp  Pipeline.cpp  Trace.cpp  util.cpp  yaml.cpp
